Checkpoint: Template exportável completo: documentação profissional (README, SETUP, DEPLOY, LICENSE, PACKAGE, TEMPLATE_INFO, INDEX), script customize.sh de customização automática, script test-config.js de validação, config.json centralizado, .gitignore atualizado. Sistema Doctor Auto 100% funcional como showcase, pronto para venda como template genérico para outras oficinas.

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,23 @@ temp/
 *.db
 *.sqlite
 *.sqlite3
+
+# Template-specific
+config.local.json
+secrets.json
+*.backup
+
+# PM2
+.pm2/
+ecosystem.config.js
+
+# Certificados SSL
+*.pem
+*.key
+*.crt
+*.cert
+
+# Uploads e arquivos de usuário
+uploads/
+user-files/
+storage/
