Checkpoint: Correções críticas de integração Trello: corrigido nome da lista "Pronto para Iniciar" e emoji "🟡 Pronto / Aguardando Retirada". Adicionados indicadores visuais separados para labels RETORNO (3 veículos) e FORA DA LOJA (2 veículos) com cards destacados em vermelho e azul. Dashboard agora sincroniza corretamente mostrando 29 veículos (16 diagnóstico, 1 pronto para iniciar, 5 em execução).

--- a/config.json
+++ b/config.json
@@ -77,10 +77,10 @@
       "orcamento": "Orçamento",
       "aguardandoAprovacao": "Aguardando Aprovação",
       "aguardandoPecas": "Aguardando Peças",
-      "prontoParaIniciar": "Pronto pra Iniciar",
+      "prontoParaIniciar": "Pronto para Iniciar",
       "emExecucao": "Em Execução",
       "qualidade": "Qualidade",
-      "prontos": "🟬 Pronto / Aguardando Retirada",
+      "prontos": "🟡 Pronto / Aguardando Retirada",
       "entregue": "Entregue"
     },
     "customFields": {
